--- a/src/main/java/com/api/con/bkp_configs.json
+++ b/src/main/java/com/api/con/bkp_configs.json
@@ -1,5 +1,5 @@
 {
-  "isPreRequest": true,
+  "isPreRequest": false,
   "preSendJson":{
     "jsonPre":["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday"],
     "preRequestType":"POST",
@@ -63,12 +63,13 @@
       }
     ]
   },
-  "mainRequestType":"POST",
+  "mainRequestType":"PUT",
   "mainContentType": "JSON",
   "mainRequestUrl":"http://localhost:3030/temptry/api/test",
   "mainHeaders":[ {"header": "Main", "value": "testMain"}, {"header": "MnPQR", "value": "Mn43534"}],
-  "setFromPreResponse":[{"pathOrName": "RESPONSEHED","isFromPreHeader": true, "updateKeyPath": "RESPONSEHEDTMP", "isToMainHeader": true},{"pathOrName": "event.march.fstWeek","isFromPreHeader": false, "updateKeyPath": "cars.car2.import.qa", "isToMainHeader": false},{"pathOrName": "event.jan","isFromPreHeader": false, "updateKeyPath": "cars.car2.model", "isToMainHeader": false}],
+  "fromPreResponse":[{"pathOrName": "RESPONSEHED","isFromPreHeader": true, "updateKeyPath": "RESPONSEHEDTMP", "isToMainHeader": true},{"pathOrName": "event.march.fstWeek","isFromPreHeader": false, "updateKeyPath": "cars.car2.import.qa", "isToMainHeader": false},{"pathOrName": "event.jan","isFromPreHeader": false, "updateKeyPath": "cars.car2.model", "isToMainHeader": false}],
   "constructJsonForEachField": ["REMOVE_FIELD", "EMPTY_CHECK", "NULL_CHECK"],
+  "dynamicKeys": [{"path":"cars.car1", "type": "UUID", "isLength":"2",  "isAppend":true  }],
   "modifyJson":[
     {
       "fields":[
@@ -76,8 +77,8 @@
       ],
       "isIgnore": false,
       "modifyType": "NULL_CHECK",
-      "statusCode":400,
-      "responsePayLoad":"{\n    \"task\": \"Task 51\",\n    \"category\": \"R&D\",\n    \"status\": \"Completed\",\n    \"event\": {\n        \"jan\": \"personal\",\n        \"feb\": \"trip\",\n        \"march\": {\n            \"fstWeek\": \"sports\",\n            \"secWeek\": \"helper\"\n        }\n    },\n    \"createdDate\": \"2019-07-11T04:06:44.110Z\"\n}",
+      "statusCode":200,
+      "expectedPayload":{    "task": "Task 51",    "category": "R&D",    "status": "Completed",   "event": {        "jan": "personal",        "feb": "trip",        "march": {"fstWeek": "sports", "secWeek": "helper"}    },    "createdDate": "2019-07-11T04:06:44.110Z"},
       "isStrictCompare":false
     },
     {
@@ -88,7 +89,7 @@
       "isIgnore": true,
       "modifyType": "NULL_CHECK",
       "statusCode":400,
-      "responsePayLoad":"",
+      "expectedPayload":null,
       "isStrictCompare":false
     },
     {
@@ -98,7 +99,7 @@
       "isIgnore": true,
       "modifyType": "ONLY_USE",
       "statusCode":200,
-      "responsePayLoad":"",
+      "expectedPayload":null,
       "isStrictCompare":false
     },
     {
@@ -108,7 +109,7 @@
       "isIgnore": false,
       "modifyType": "ONLY_USE",
       "statusCode":400,
-      "responsePayLoad":"",
+      "expectedPayload":null,
       "isStrictCompare":false
     },
     {
@@ -119,7 +120,7 @@
       "isIgnore": false,
       "modifyType": "ONLY_USE",
       "statusCode":400,
-      "responsePayLoad":"",
+      "expectedPayload":null,
       "isStrictCompare":false
     },
     {
@@ -129,7 +130,7 @@
       "isIgnore": false,
       "modifyType": "REMOVE_FIELD",
       "statusCode":200,
-      "responsePayLoad":"",
+      "expectedPayload":null,
       "isStrictCompare":false
     },
     {
@@ -139,7 +140,7 @@
       "isIgnore": false,
       "modifyType": "REMOVE_FIELD",
       "statusCode":400,
-      "responsePayLoad":"",
+      "expectedPayload":null,
       "isStrictCompare":false
     },
     {
@@ -150,7 +151,7 @@
       "isIgnore": false,
       "modifyType": "REMOVE_FIELD",
       "statusCode":200,
-      "responsePayLoad":"{\n    \"task\": \"Task 51\",\n    \"category\": \"R&D\",\n    \"status\": \"Completed\",\n    \"event\": {\n        \"jan\": \"personal\",\n        \"feb\": \"trip\",\n        \"march\": {\n            \"fstWeek\": \"sports\",\n            \"secWeek\": \"helper\"\n        }\n    },\n    \"createdDate\": \"2019-07-11T04:06:44.110Z\"\n}",
+      "expectedPayload":{    "task": "Task 51",    "category": "R&D",    "status": "Completed",   "event": {        "jan": "personal",        "feb": "trip",        "march": {            "fstWeek": "sports",            "secWeek": "helper"        }    },    "createdDate": "2019-07-11T04:06:44.110Z"},
       "isStrictCompare":true
     },
     {
@@ -160,7 +161,7 @@
       "isIgnore": false,
       "modifyType": "NULL_CHECK",
       "statusCode":200,
-      "responsePayLoad":"",
+      "expectedPayload":null,
       "isStrictCompare":false
     }
   ],
@@ -171,7 +172,7 @@
       "length":12,
       "type":"numNChars",
       "statusCode":200,
-      "responsePayLoad":"",
+      "expectedPayload":null,
       "isStrictCompare":false
     },
     {
@@ -180,7 +181,7 @@
       "length":12,
       "type":"charOnly",
       "statusCode":200,
-      "responsePayLoad":"",
+      "expectedPayload":null,
       "isStrictCompare":false
     },
     {
@@ -189,45 +190,42 @@
       "length":12,
       "type":"numOnly",
       "statusCode":200,
-      "responsePayLoad":"",
+      "expectedPayload":["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday"],
       "isStrictCompare":false
     }
   ],
   "valueUpdate":[
+    {
+      "isIgnore": false,
+      "statusCode":200,
+      "expectedPayload":null,
+      "isStrictCompare":false,
+      "fieldSet":[
         {
-          "isIgnore": false,
-          "statusCode":200,
-          "expectedPayload":"",
-          "isStrictCompare":false,
-          "fieldSet":[
-            {
-              "field":"employees[0].age",
-              "value":12
-            },
-            {
-              "field":"employees[0].name",
-              "value":"testAAAA"
-            }
-          ]
+          "field":"employees[0].age",
+          "value":12
         },
         {
-          "isIgnore": false,
-          "statusCode":200,
-          "expectedPayload":"",
-          "isStrictCompare":false,
-          "fieldSet":[
-            {
-              "field":"age",
-              "value":8
-            },
-            {
-              "field":"name",
-              "value":"FirstName"
-            }
-          ]
+          "field":"employees[0].name",
+          "value":"testAAAA"
         }
-  ],
-  "ignoreHeaders":[
-
+      ]
+    },
+    {
+      "isIgnore": false,
+      "statusCode":200,
+      "expectedPayload":null,
+      "isStrictCompare":false,
+      "fieldSet":[
+        {
+          "field":"age",
+          "value":8
+        },
+        {
+          "field":"name",
+          "value":"FirstName"
+        }
+      ]
+    }
   ]
 }
